# ZhiLight

./: .gitattributes  .gitignore  CHANGELOG.md  CMakeLists.txt  README.md  ZhiLight.code-workspace  requirements.txt  setup.py  version.py
3rd/bmengine/: CMakeLists.txt
3rd/bmengine/bmengine/: CMakeLists.txt
3rd/bmengine/bmengine/c10d/: c10d.cpp  host_communicator.cpp
3rd/bmengine/bmengine/core/: context.cpp  engine.cpp  layer.cpp  tensor.cpp  tensor_impl.cpp
3rd/bmengine/bmengine/functions/: element.cu  gemm.cpp  index_select.cu  init.cu  scatter.cu  sort.cu  tensor_ops.cu
3rd/bmengine/bmengine/include/bmengine/c10d/: c10d.h  host_communicator.h  host_communicator.hpp
3rd/bmengine/bmengine/include/bmengine/core/: context.h  dtype.h  engine.h  engine_config.h  layer.h  tensor.h  utils.h
3rd/bmengine/bmengine/include/bmengine/functions/: all.h  element.h  gemm.h  index_select.h  init.h  scatter.h  sort.h
3rd/bmengine/bmengine/include/private/: allocator.h  context.h  engine.h  tensor_impl.h
3rd/bmengine/tests/: CMakeLists.txt  test_print_tensor.cpp
3rd/deep_gemm/: deep_gemm_api.h
3rd/flash_decoding/: flash_api.h
3rd/flash_mla/: flash_mla.h
docs/benchmarks/: README.md  benchmarks.md
examples/: offline_inference.py
examples/models/: common_args.py  test_deepseek_vl_v2.py
src/distributed/: test.cpp
src/generator/: batch_generator.cpp  batch_generator.h  beam_buffer_manager.hpp  beam_util.cu  beam_util.h
src/kvcache/: transformer_buffer.cu
src/model/: dyn_batch_context.h  host_all_reducer.cpp  llama.cpp  llama.h  model_config.hpp  model_context.cpp  model_context.h
src/nn/attention/: attention.cpp  attention_kernel.cu  ds_flash_mla_api.cpp  ds_flash_mla_api.h  flash_decoding.cpp  flash_decoding.h  multi_head_latent_attention.cpp
src/nn/block/: block.cpp  block_kernel.cu
src/nn/embedding/: embedding.cu
src/nn/feedforward/: feedforward.cpp  feedforward.h  ff_kernel.cu  ff_kernel.h
src/nn/layernorm/: layernorm.cu
src/nn/linear/: linear.cpp  linear.h
src/nn/position/: rope_common.cuh  rope_preparer.cu  rope_preparer.h  rotary_embedding.cu  rotary_embedding.h  rotary_embedding_fuse_cache.cu
src/nn/quant/fp8/: fp8.h  fp8_util.cu
src/nn/quant/gptq/: gptq.h  q_gemm_k_major.cu
src/py_export/: bind.cpp  bind.h  py_batch_generator.cpp  py_llama.cpp  py_model_base.cpp  py_model_base.h  py_model_config.cpp
tests/: __init__.py  test_attention.py  test_feedforward.py  test_linear.py
tests/py_export_internal/: CMakeLists.txt  layer_attention.cpp  layer_linear.cpp
zhilight/: dynamic_batch.py  llama.py  loader.py  quant.py  session_generator.py
zhilight/config/: adapter.py  config_util.py  deepseek_adapter.py  dev_config.py  dist_config.py  llama_adapter.py  qwen2_adapter.py  qwen3_adapter.py
zhilight/models/: auto_model.py  deepseek_vl_v2.py
zhilight/server/openai/basic/: config.py
zhilight/server/openai/engine/: arg_utils.py  async_llm_engine.py  llm_engine.py
zhilight/server/openai/entrypoints/: api_server.py  cli_args.py  protocol.py  reasoning_parser.py  serving_chat.py
zhilight/utils/: image_utils.py
